--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
-   <head>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-       <script src="class.js"></script>
-	  <script src="script.js"></script>
-   </head>
-   <body>
-   </body>
+
+<head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+    <script src="base.js"></script>
+    <script src="class.js"></script>
+    <script src="class.grasseater.js"></script>
+    <script src="class.wild.js"></script>
+    <script src="class.double.js"></script>
+    <script src="class.mover.js"></script>
+    <script src="script.js"></script>
+</head>
+
+<body>
+</body>
+
 </html>
