--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="class.wild.js"></script>
     <script src="class.double.js"></script>
     <script src="class.mover.js"></script>
+    <!--<script src="class.sex.js"></script>-->
+    <script src="class.chameleon.js"></script>
+    <!--<script src="server.js"></script>-->
     <script src="script.js"></script>
 </head>
 
@@ -15,6 +18,7 @@
 
 
     <div id="text"></div>
+    <div id="time"></div>
 </body>
 
 </html>
