--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
 
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-    <script src="base.js"></script>
+    <script src="p5/p5.js"></script>
+    <!-- <script src="base.js"></script>
     <script src="class.js"></script>
     <script src="class.grasseater.js"></script>
     <script src="class.wild.js"></script>
     <script src="class.double.js"></script>
-    <script src="class.mover.js"></script>
+    <script src="class.mover.js"></script> -->
     <!--<script src="class.sex.js"></script>-->
-    <script src="class.chameleon.js"></script>
+    <!-- <script src="class.chameleon.js"></script> -->
     <!--<script src="server.js"></script>-->
     <script src="script.js"></script>
 </head>
