--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--<script src="class.sex.js"></script>-->
     <!-- <script src="class.chameleon.js"></script> -->
     <!--<script src="server.js"></script>-->
+    <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
 </head>
 
